@@ -281,6 +281,14 @@ module StateMachine
         end
       end
       
+      # Forces recognize the change in state to be recognized regardless of
+      # whether the state value actually changed
+      def write(object, attribute, value)
+        result = super
+        object.send("#{self.attribute}_will_change!") if attribute == :state && object.respond_to?("#{self.attribute}_will_change!")
+        result
+      end
+      
       # Adds a validation error to the given object 
       def invalidate(object, attribute, message, values = [])
         attribute = self.attribute(attribute)
